2014-05-23  Enrica Casucci  <enrica@apple.com>

        REGRESSION (iOS WebKit2): Autocorrection is not accurate when changing selection.
        https://bugs.webkit.org/show_bug.cgi?id=133237
        <rdar://problem/16655776>

        Reviewed by Ryosuke Niwa.

        * UIProcess/ios/WKContentViewInteraction.mm:
        (-[WKContentView beginSelectionChange]):
        (-[WKContentView endSelectionChange]):

        When the selection is changed with a gesture in an editable element,
        we must notify the keyboard to make sure the autocorrection engine 
        updates its typing context. WKContentView must implement
        beginSelectionChange and endSelectionChange to call into
        the keyboard layer.

2014-05-22  Brent Fulgham  <bfulgham@apple.com>

        [iOS] WK2: Provide implementation for windowFrame
        https://bugs.webkit.org/show_bug.cgi?id=133205
        <rdar://problem/16894890>

        Reviewed by Benjamin Poulain.

        * UIProcess/Cocoa/UIDelegate.h:
        * UIProcess/Cocoa/UIDelegate.mm:
        (WebKit::UIDelegate::UIClient::windowFrame): Added.
        * UIProcess/ios/PageClientImplIOS.mm:
        (WebKit::PageClientImpl::convertToUserSpace): Added.

2014-05-20  Anders Carlsson  <andersca@apple.com>

        Use a per app directory structure for website data
        https://bugs.webkit.org/show_bug.cgi?id=133125
        <rdar://problem/16830143>

        Reviewed by Dan Bernstein, Sam Weinig and Tim Horton.

        Put website data in subdirectories of ~/Library/WebKit/<bundle ID>/WebsiteData.
        We use "LocalStorage", "WebSQL", and "IndexedDB" subdirectories.

        * UIProcess/API/Cocoa/WKProcessPool.mm:
        (websiteDataDirectoryURL):
        (-[WKProcessPool _initWithConfiguration:]):

2014-05-23  Dan Bernstein  <mitz@apple.com>

        [Cocoa] WKNavigationResponsePrivate.h is internal
        https://bugs.webkit.org/show_bug.cgi?id=133218

        Reviewed by Dean Jackson.
