@@ -1,3 +1,11 @@
+2014-05-23  Anders Carlsson  <andersca@apple.com>
+
+        Fix test failures on the bot.
+
+        * UIProcess/API/Cocoa/WKProcessPool.mm:
+        (websiteDataDirectoryURL):
+        If we have no bundle identifier, use the process name.
+
 2014-05-23  Enrica Casucci  <enrica@apple.com>
 
         REGRESSION (iOS WebKit2): Autocorrection is not accurate when changing selection.
